[package]
name = "hurst"
version = "0.1.0"
authors = ["Evan Roman <evanroman1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen="0.2.7"
streaming-stats = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
