[package]
name = "hurst"
description = "Hurst Exponent estimator functions for Rust"
readme = "README.md"
homepage = "https://github.com/evrom/hurst"
repository = "https://github.com/evrom/hurst"
documentation = "https://docs.rs/hurst"
version = "0.2.0"
authors = ["Evan Roman <evanroman1@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
linreg = "0.2.0"
thiserror = "1.0.40"
